stray navigate code. Scroll bars no longer show when character moves off screen

--- a/splmns-animation/src/index.css
+++ b/splmns-animation/src/index.css
@@ -66,3 +66,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+html, body {
+  overflow: hidden;
+  width: 100%;
+  max-width: 100%;
+}
